Fixed a bug with wrapping

--- a/main.css
+++ b/main.css
@@ -36,6 +36,8 @@
     display: flex;
     justify-content: right;
     padding: 30px 20px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .buttons {
